--- a/vignettes/original/_simulation_study.Rmd
+++ b/vignettes/original/_simulation_study.Rmd
@@ -1,32 +1,17 @@
 ---
 title: "4. Conduct a simulation study"
-author: "Matt Secrest and Isaac Gravestock"
+author: "Matt Secrest, Isaac Gravestock, Kexin Jin and Zhi Yang"
 output:
   rmarkdown::html_vignette:
     toc: true
     toc_depth: 3
-    code_folding: show
 vignette: >
   %\VignetteIndexEntry{4. Conduct a simulation study}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r, echo = FALSE, message = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#",
-  fig.width = 5,
-  fig.height = 3,
-  dpi = 120,
-  fig.align = "center"
-)
-options(rmarkdown.html_vignette.check_title = FALSE)
-output_hook <- knitr::knit_hooks$get("output")
-output_null <- function(x, options) {
-  return(NULL)
-}
-```
+
 
 In this article, you'll learn how to use `psborrow2` to create a
 simulation study with the goal of informing trial design. 
@@ -37,7 +22,8 @@ Note that we'll need `cmdstanr` to run the simulation study. Please install
 
 Let's load `psborrow2` to start:
 
-```{r setup, message = FALSE}
+
+```{r message = FALSE}
 library(psborrow2)
 library(cmdstanr)
 ```
@@ -81,7 +67,8 @@ HR of 1.0 and true HR of 0.8). Each scenario is arranged as a list of
 matrices that were generated according to that data generation scenario.
 
 <center>
-![Figure 1](data_list.jpg){width=80%}
+
+![Figure 1](C:/Users/jink4/Bristol Myers Squibb/Yang, Zhi - External Control Borrowing Working Group\Genentech collaboration\Apr2024_NIH_conference/data_list.jpg){width=80%}
 
 </center>
 
@@ -93,7 +80,8 @@ external to internal controls). Suppose we have a function,
 
 That is:
 
-```{r class.source = "fold-hide"}
+
+```{r}
 library(simsurv)
 # function to create a single matrix
 sim_single_matrix <- function(n = 500, # n simulated pts
@@ -148,9 +136,17 @@ sim_single_matrix <- function(n = 500, # n simulated pts
 ```
 
 
+
 ```{r}
 set.seed(123)
 head(sim_single_matrix(n = 500, hr = 0.5, drift_hr = 1.2))
+#      id ext trt      time status cnsr
+# [1,]  1   0   0  8.179722      1    0
+# [2,]  2   0   0  6.884286      1    0
+# [3,]  3   0   0  2.348331      1    0
+# [4,]  4   0   0 17.898011      1    0
+# [5,]  5   0   0  3.870353      1    0
+# [6,]  6   0   0  6.795403      1    0
 ```
 
 Using this function, let's simulate a list of lists of matrices with four
@@ -161,12 +157,13 @@ scenarios:
 - True HR = 0.6, drift HR = 1.5
 - True HR = 1.0, drift HR = 1.5
 
+
 ```{r}
 # Seed for reproducibility
-set.seed(123)
+set.seed(222)
 
 # Number of simulations per scenario
-n <- 100
+n <- 10
 
 # Create list of lists of data
 my_data_list <- list(
@@ -189,22 +186,34 @@ my_data_list <- list(
 )
 ```
 
-There are `r NROW(my_data_list)` scenarios.
+There are 4 scenarios.
+
 
 ```{r}
 NROW(my_data_list)
+# [1] 4
 ```
 
-Each scenario has `r n` matrices.
+Each scenario has 100 matrices.
+
 
 ```{r}
 NROW(my_data_list[[1]])
+# [1] 100
 ```
 
 The lowest level of the list of lists is a data matrix.
 
+
 ```{r}
 head(my_data_list[[1]][[1]])
+#      id ext trt      time status cnsr
+# [1,]  1   0   0  8.179722      1    0
+# [2,]  2   0   0  6.884286      1    0
+# [3,]  3   0   0  2.348331      1    0
+# [4,]  4   0   0 17.898011      1    0
+# [5,]  5   0   0  3.870353      1    0
+# [6,]  6   0   0  6.795403      1    0
 ```
 
 ### `guide`
@@ -221,8 +230,9 @@ that the external control arm experiences greater hazard than the internal
 control arm.
 * The name of a column that indexes the `data_list`
 
-In this example, the `r NROW(my_data_list)` scenarios are
+In this example, the 4 scenarios are
 summarized with the below `guide`:
+
 
 ```{r}
 my_sim_data_guide <- expand.grid(
@@ -233,6 +243,11 @@ my_sim_data_guide <- expand.grid(
 my_sim_data_guide$id <- seq(1, NROW(my_sim_data_guide))
 
 my_sim_data_guide
+#   true_hr          drift_hr id
+# 1     0.6       No drift HR  1
+# 2     1.0       No drift HR  2
+# 3     0.6 Moderate drift HR  3
+# 4     1.0 Moderate drift HR  4
 ```
 
 This guide implies that `my_sim_data_guide[[1]]` is a list of
@@ -247,6 +262,7 @@ For our study, these are `"true_hr"`, `"drift_hr"`, and `"id"`.
 
 Putting it all together, we can create an object of class `SimDataList`:
 
+
 ```{r}
 my_sim_data_list <- sim_data_list(
   data_list = my_data_list,
@@ -257,6 +273,12 @@ my_sim_data_list <- sim_data_list(
 )
 
 my_sim_data_list
+# SimDataList object with  4  different scenarios
+#   true_hr          drift_hr id n_datasets_per_param
+# 1     0.6       No drift HR  1                  100
+# 2     1.0       No drift HR  2                  100
+# 3     0.6 Moderate drift HR  3                  100
+# 4     1.0 Moderate drift HR  4                  100
 ```
 
 ## `outcome`
@@ -266,6 +288,7 @@ either a single `Outcome` class object (e.g., as produced by `outcome_surv_expon
 or a list of `Outcome` class objects passed to `sim_outcome_list()`. For our
 example, let's just use a single exponential distribution.
 
+
 ```{r}
 my_sim_out <- outcome_surv_exponential(
   time_var = "time",
@@ -274,6 +297,18 @@ my_sim_out <- outcome_surv_exponential(
 )
 
 my_sim_out
+# Outcome object with class OutcomeSurvExponential 
+# 
+# Outcome variables:
+# time_var cens_var 
+#   "time"   "cnsr" 
+# 
+# Baseline prior:
+# Normal Distribution
+# Parameters:
+#  Stan  R    Value
+#  mu    mean    0 
+#  sigma sd   1000
 ```
 
 ## `borrowing`
@@ -292,6 +327,7 @@ How do we specify that we want to evaluate multiple borrowing methods?
 We'll use a special list of `Borrowing` objects,
 which we'll create through the function `sim_borrowing_list()`.
 
+
 ```{r}
 my_borrowing_list <- sim_borrowing_list(
   list(
@@ -303,6 +339,12 @@ my_borrowing_list <- sim_borrowing_list(
 )
 
 my_borrowing_list
+# SimBorrowingList object with  4  different scenario(s)
+#   borrowing_scenario
+# 1       No borrowing
+# 2     Full borrowing
+# 3 BDB - conservative
+# 4   BDB - aggressive
 ```
 
 ## `covariate`
@@ -320,10 +362,21 @@ As with other inputs, this can be a single instance of a class `Treatment`,
 or a list of these classes, created with `sim_treatment_list()`. Let's
 just use a single instance:
 
+
 ```{r}
 my_sim_treat <- treatment_details("trt", prior_normal(0, 1000))
 
 my_sim_treat
+# Treatment object
+# 
+# Treatment flag column: trt 
+# 
+# Treatment effect prior:
+# Normal Distribution
+# Parameters:
+#  Stan  R    Value
+#  mu    mean    0 
+#  sigma sd   1000
 ```
 
 ## `create_simulation_obj()`
@@ -334,18 +387,17 @@ ready to sample on our behalf.
 
 ***Important:*** `psborrow2` will simulate the Cartesian product of all
 unique list elements in `data_matrix_list`, `outcome`, `borrowing`,
-`covariate`, and `treatment`. We have `r NROW(my_sim_data_guide)` data
-generation scenarios and `r NROW(my_borrowing_list@guide)` borrowing
+`covariate`, and `treatment`. We have 4 data
+generation scenarios and 4 borrowing
 scenarios. The other inputs just have one scenario (or 0 for `covariate`,
 which is equivalent to one scenario). This means we should expect
-`r NROW(my_sim_data_guide)` $\times$ `r NROW(my_borrowing_list@guide)`
-$=$ `r NROW(my_sim_data_guide) * NROW(my_borrowing_list@guide)`
+4 $/times$ 4
+$=$ 16
 combinations of parameters. Let's create a simulation object of class
 `Simulation`:
 
-```{r echo = FALSE}
-knitr::knit_hooks$set(output = output_null)
-```
+
+
 
 ```{r}
 simulation_obj <- create_simulation_obj(
@@ -358,9 +410,7 @@ simulation_obj <- create_simulation_obj(
 
 simulation_obj
 ```
-```{r echo = FALSE}
-knitr::knit_hooks$set(output = output_hook)
-```
+
 
 While we get a warning about the size of the simulation study, we are not worried
 because we are limiting our MCMC samples below in this example.
@@ -368,8 +418,43 @@ because we are limiting our MCMC samples below in this example.
 We can access the guide to see the specific scenarios that will be
 simulated with `show_guide()`:
 
+
 ```{r}
 show_guide(simulation_obj)
+#    true_hr          drift_hr id n_datasets_per_param outcome_scenario
+# 1      0.6       No drift HR  1                  100          default
+# 2      1.0       No drift HR  2                  100          default
+# 3      0.6 Moderate drift HR  3                  100          default
+# 4      1.0 Moderate drift HR  4                  100          default
+# 5      0.6       No drift HR  1                  100          default
+# 6      1.0       No drift HR  2                  100          default
+# 7      0.6 Moderate drift HR  3                  100          default
+# 8      1.0 Moderate drift HR  4                  100          default
+# 9      0.6       No drift HR  1                  100          default
+# 10     1.0       No drift HR  2                  100          default
+# 11     0.6 Moderate drift HR  3                  100          default
+# 12     1.0 Moderate drift HR  4                  100          default
+# 13     0.6       No drift HR  1                  100          default
+# 14     1.0       No drift HR  2                  100          default
+# 15     0.6 Moderate drift HR  3                  100          default
+# 16     1.0 Moderate drift HR  4                  100          default
+#    borrowing_scenario covariate_scenario treatment_scenario
+# 1        No borrowing      No adjustment            default
+# 2        No borrowing      No adjustment            default
+# 3        No borrowing      No adjustment            default
+# 4        No borrowing      No adjustment            default
+# 5      Full borrowing      No adjustment            default
+# 6      Full borrowing      No adjustment            default
+# 7      Full borrowing      No adjustment            default
+# 8      Full borrowing      No adjustment            default
+# 9  BDB - conservative      No adjustment            default
+# 10 BDB - conservative      No adjustment            default
+# 11 BDB - conservative      No adjustment            default
+# 12 BDB - conservative      No adjustment            default
+# 13   BDB - aggressive      No adjustment            default
+# 14   BDB - aggressive      No adjustment            default
+# 15   BDB - aggressive      No adjustment            default
+# 16   BDB - aggressive      No adjustment            default
 ```
 
 ## `mcmc_sample()`
@@ -383,9 +468,8 @@ specifies the quantiles for null coverage and true coverage. For instance,
 95% credible coverage would be estimated with
 `posterior_quantiles = c(0.025, 0.975)`, the default argument.
 
-```{r echo = FALSE}
-knitr::knit_hooks$set(output = output_null)
-```
+
+
 
 ```{r}
 simulation_res <- mcmc_sample(
@@ -398,29 +482,54 @@ simulation_res <- mcmc_sample(
 )
 ```
 
-```{r echo = FALSE}
-knitr::knit_hooks$set(output = output_hook)
-```
+
 
 ***Note*** unlike an analysis on a single dataset, `mcmc_sample()` does not
 return a `CmdStanModel` object when applied to a simulation study object.
 Instead, it returns a class unique to simulation study results:
 `MCMCSimulationResult`.
 
+
 ```{r}
 class(simulation_res)
+# [1] "MCMCSimulationResult"
+# attr(,"package")
+# [1] "psborrow2"
 ```
 
 Let's look at the performance of our simulation study by extracting the data.frame
 that summarizes results, `get_results()`:
 
+
 ```{r}
 simulation_res_df <- get_results(simulation_res)
 head(simulation_res_df)
+#   true_hr          drift_hr id n_datasets_per_param outcome_scenario
+# 1     0.6       No drift HR  1                  100          default
+# 2     1.0       No drift HR  2                  100          default
+# 3     0.6 Moderate drift HR  3                  100          default
+# 4     1.0 Moderate drift HR  4                  100          default
+# 5     0.6       No drift HR  1                  100          default
+# 6     1.0       No drift HR  2                  100          default
+#   borrowing_scenario covariate_scenario treatment_scenario    trt_var
+# 1       No borrowing      No adjustment            default 0.06383754
+# 2       No borrowing      No adjustment            default 0.06233316
+# 3       No borrowing      No adjustment            default 0.06306555
+# 4       No borrowing      No adjustment            default 0.06333808
+# 5     Full borrowing      No adjustment            default 0.02648792
+# 6     Full borrowing      No adjustment            default 0.02573194
+#     mse_mean  bias_mean null_coverage true_coverage
+# 1 0.05915273 0.06270199          0.58          0.96
+# 2 0.13032971 0.03916893          0.96          0.96
+# 3 0.04724394 0.01524864          0.44          0.96
+# 4 0.13079915 0.03571795          0.95          0.95
+# 5 0.02027734 0.02150292          0.10          0.96
+# 6 0.05067948 0.01040672          0.97          0.97
 ```
 
 Let's quickly visualize the results using `ggplot2`. We will first
 load `ggplot2` and factorize our borrowing scenarios:
+
 
 ```{r}
 # Load ggplot2
@@ -439,7 +548,8 @@ simulation_res_df$borrowing_scenario <- factor(simulation_res_df$borrowing_scena
 
 ### MSE
 
-```{r class.source = "fold-hide", fig.dim = c(5, 3), dpi = 140}
+
+```{r, fig.width=8}
 ggplot(simulation_res_df) +
   geom_bar(aes(x = factor(true_hr), fill = borrowing_scenario, y = mse_mean),
     stat = "identity", position = "dodge"
@@ -453,12 +563,15 @@ ggplot(simulation_res_df) +
   scale_fill_manual(values = c("#EF798A", "#F7A9A8", "#7D82B8", "#613F75"))
 ```
 
+
+
 ### Type I error
 
 Because we included a true HR of 1.0, we can evaluate type I error by looking
 at the compliment to the true parameter coverage:
 
-```{r class.source = "fold-hide", fig.dim = c(5, 3), dpi = 140}
+
+```{r, fig.width=8}
 ggplot(simulation_res_df[simulation_res_df$true_hr == 1.0, ]) +
   geom_bar(aes(x = factor(drift_hr), fill = borrowing_scenario, y = 1 - true_coverage),
     stat = "identity", position = "dodge"
@@ -473,11 +586,14 @@ ggplot(simulation_res_df[simulation_res_df$true_hr == 1.0, ]) +
   geom_hline(aes(yintercept = 0.05), linetype = 2)
 ```
 
+
+
 ### Power
 
 We can include power by looking at the results for our true simulation of 0.6.
 
-```{r class.source = "fold-hide", fig.dim = c(5, 3), dpi = 140}
+
+```{r, fig.width=8}
 ggplot(simulation_res_df[simulation_res_df$true_hr == 0.6, ]) +
   geom_bar(aes(x = factor(drift_hr), fill = borrowing_scenario, y = 1 - null_coverage),
     stat = "identity", position = "dodge"
@@ -491,3 +607,77 @@ ggplot(simulation_res_df[simulation_res_df$true_hr == 0.6, ]) +
   scale_y_continuous(breaks = seq(0, 1, .1), limits = c(0, 1)) +
   geom_hline(aes(yintercept = 0.80), linetype = 2)
 ```
+
+
+
+
+### EHSS
+
+We can calculate the external historical sample size (EHSS) based on the simulation results. 
+
+```{r, fig.width=8}
+var_mat <- do.call(rbind, simulation_res@results$trt_var)
+N_internalcontrol <- 250*0.3
+
+simulation_res_df$EHSS <- rowMeans(var_mat[rep(1:4, 4), ]/var_mat-1)*N_internalcontrol
+simulation_res_df2 <- simulation_res_df[simulation_res_df$borrowing_scenario!="No borrowing", ]
+
+ggplot(simulation_res_df2) +
+  geom_bar(aes(x = factor(drift_hr), fill = borrowing_scenario, y = EHSS),
+    stat = "identity", position = "dodge"
+  ) +
+  labs(
+    fill = "Borrowing scenario",
+    x = "Drift HR",
+    y = "EHSS"
+  ) +
+  facet_grid(~true_hr)+
+  scale_fill_manual(values = c("#F7A9A8", "#7D82B8", "#613F75")) +
+  scale_y_continuous(breaks = c(0,30,60,N_internalcontrol, 90,120)) +
+  geom_hline(aes(yintercept = N_internalcontrol), linetype = 2)
+```
+
+
+
+
+### Optimal Accuracy Design 
+
+We can also compare designs for accuracy on the basis of their Euclidean distance to the ideal design by minimizing the type I and type II errors (Zabor, E. C. et al. (2022).). We can visualize the accuracy of any design using a scatterplot displaying type I error rate on the x-axis and power (1 -type II error rate) on the y-axis. A perfectly accurate design approaches the point (0, 1), representing no type I error and power of one.
+
+In the real design of clinical trial, we can designate probability to scenarios of drift hazard ratio and obtain weighted Euclidean distance to the ideal design. An example shows the probability of moderate drift hazard ratio is 0.2 and the probability of no drift hazard ratio is 0.8. 
+
+*results weighted by (0.8, 0.2) for no drift and moderate drift
+
+
+```{r, fig.width=8}
+df_accuracy <- data.frame(simulation_res_df2[simulation_res_df2$true_hr == 1.0, 
+                                            c("drift_hr", "borrowing_scenario")], 
+                          typeI = 1 - simulation_res_df2[simulation_res_df2$true_hr == 1.0,
+                                                        c("true_coverage")],
+                          Power = 1 - simulation_res_df2[simulation_res_df2$true_hr == 0.6, 
+                                                        "null_coverage"])
+df_accuracy$weights <- rep(c(0.8, 0.2), 3)
+
+df_sum <- data.frame(aggregate(df_accuracy$typeI*df_accuracy$weights,
+                               list(df_accuracy$borrowing_scenario), sum), 
+                     aggregate(df_accuracy$Power*df_accuracy$weights,
+                               list(df_accuracy$borrowing_scenario), sum))
+df_sum <- df_sum[, c(1,2,4)]
+colnames(df_sum) <- c("borrowing_scenario", "typeI", "Power")
+
+ggplot(df_sum) +
+  geom_point(aes(x = typeI, color = borrowing_scenario, y = Power), size = 4) +
+  xlim(c(0,1))+
+  ylim(c(0,1))+
+  labs(
+    color = "Borrowing scenario",
+    x = "Type I Error Rate",
+    y = "Power"
+  ) +
+  scale_color_manual(values = c("#F7A9A8", "#7D82B8", "#613F75")) +
+  ggtitle("Optimal Accuracy Design")
+
+```
+
+
+
