--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -211,3 +211,13 @@
   year={2022},
   school={The Medical College of Wisconsin}
 }
+
+@article{zabor2022optimal,
+  title={Optimal sequential predictive probability designs for early-phase oncology expansion cohorts},
+  author={Zabor, Emily C and Kaizer, Alexander M and Garrett-Mayer, Elizabeth and Hobbs, Brian P},
+  journal={JCO Precision Oncology},
+  volume={6},
+  pages={e2100390},
+  year={2022},
+  publisher={Wolters Kluwer Health}
+}
