--- a/vignettes/simple_overview.Rmd
+++ b/vignettes/simple_overview.Rmd
@@ -12,108 +12,22 @@ The goal of this demo is to conduct a Bayesian Dynamic Borrowing
 (BDB) analysis using the hierarchical commensurate prior on a dataset.
 
 
-```r
+
+```
 # Load packages ----
 library(psborrow2)
 
 # Survival analysis
 library(survival)
-```
-
-```
-## Warning: package 'survival' was built under R version 4.3.2
-```
-
-```r
 library(ggsurvfit)
-```
-
-```
-## Loading required package: ggplot2
-```
-
-```r
 library(flexsurv)
-```
 
-```
-## Warning: package 'flexsurv' was built under R version 4.3.2
-```
-
-```r
 # Additional tools for draws objects
 library(bayesplot)
-```
-
-```
-## Warning: package 'bayesplot' was built under R version 4.3.2
-```
-
-```
-## This is bayesplot version 1.11.1
-```
-
-```
-## - Online documentation and vignettes at mc-stan.org/bayesplot
-```
-
-```
-## - bayesplot theme set to bayesplot::theme_default()
-```
-
-```
-##    * Does _not_ affect other ggplot2 plots
-```
-
-```
-##    * See ?bayesplot_theme_set for details on theme setting
-```
-
-```r
 library(posterior)
-```
 
-```
-## This is posterior version 1.5.0
-```
-
-```
-## 
-## Attaching package: 'posterior'
-```
-
-```
-## The following object is masked from 'package:bayesplot':
-## 
-##     rhat
-```
-
-```
-## The following objects are masked from 'package:stats':
-## 
-##     mad, sd, var
-```
-
-```
-## The following objects are masked from 'package:base':
-## 
-##     %in%, match
-```
-
-```r
 # Comparing populations
 library(table1)
-```
-
-```
-## 
-## Attaching package: 'table1'
-```
-
-```
-## The following objects are masked from 'package:base':
-## 
-##     units, units<-
 ```
 
 
@@ -275,7 +189,7 @@ exp_outcome <- outcome_surv_exponential(
 )
 ```
 
-# Borrowing objectsi 
+# Borrowing object
 
 Borrowing objects are created with:
 ```
@@ -369,7 +283,7 @@ Conduct MCMC sampling with:
 results <- mcmc_sample(
   x = analysis_object,
   iter_warmup = 1000,
-  iter_sampling = 1000,
+  iter_sampling = 5000,
   chains = 1
 )
 ```
@@ -389,12 +303,12 @@ results
 
 ```
 ##  variable     mean   median   sd  mad       q5      q95 rhat ess_bulk ess_tail
-##  lp__     -1617.96 -1617.61 1.47 1.26 -1620.86 -1616.24 1.00      402      416
-##  beta_trt    -0.15    -0.16 0.20 0.21    -0.46     0.20 1.00      490      651
-##  tau          1.17     0.49 1.89 0.66     0.01     4.59 1.00      392      484
-##  alpha[1]    -3.36    -3.35 0.16 0.17    -3.63    -3.11 1.00      493      474
-##  alpha[2]    -2.40    -2.39 0.06 0.06    -2.49    -2.31 1.00      808      640
-##  HR_trt       0.88     0.85 0.18 0.18     0.63     1.22 1.00      490      651
+##  lp__     -1617.91 -1617.61 1.47 1.30 -1620.77 -1616.15 1.00     1840     2405
+##  beta_trt    -0.15    -0.16 0.20 0.20    -0.48     0.18 1.00     2120     2821
+##  tau          1.23     0.54 1.86 0.75     0.00     4.76 1.00     1598     1021
+##  alpha[1]    -3.36    -3.36 0.16 0.16    -3.62    -3.10 1.00     2119     2572
+##  alpha[2]    -2.40    -2.40 0.06 0.06    -2.49    -2.31 1.00     3760     3188
+##  HR_trt       0.87     0.86 0.18 0.17     0.62     1.19 1.00     2120     2821
 ```
 
 # Interpret results
@@ -436,14 +350,14 @@ posterior::summarize_draws(draws, ~ quantile(.x, probs = c(0.025, 0.50, 0.975)))
 
 ```
 ## # A tibble: 6 × 4
-##   variable                                `2.5%`     `50%`   `97.5%`
-##   <chr>                                    <dbl>     <dbl>     <dbl>
-## 1 lp__                               -1622.      -1618.    -1616.   
-## 2 treatment log HR                      -0.526      -0.162     0.244
-## 3 commensurability parameter             0.00153     0.490     5.98 
-## 4 baseline log hazard rate, internal    -3.69       -3.35     -3.06 
-## 5 baseline log hazard rate, external    -2.51       -2.39     -2.29 
-## 6 treatment HR                           0.591       0.850     1.28
+##   variable                                 `2.5%`     `50%`   `97.5%`
+##   <chr>                                     <dbl>     <dbl>     <dbl>
+## 1 lp__                               -1621.       -1618.    -1616.   
+## 2 treatment log HR                      -0.545       -0.155     0.244
+## 3 commensurability parameter             0.000808     0.539     6.39 
+## 4 baseline log hazard rate, internal    -3.68        -3.36     -3.04 
+## 5 baseline log hazard rate, external    -2.51        -2.40     -2.29 
+## 6 treatment HR                           0.580        0.856     1.28
 ```
 
 Look at histogram of draws with bayesplot package
@@ -650,7 +564,7 @@ anls_ps_no_borrow <- create_analysis_obj(
 res_ps_no_borrow <- mcmc_sample(
   x = anls_ps_no_borrow,
   iter_warmup = 1000,
-  iter_sampling = 500,
+  iter_sampling = 5000,
   chains = 1
 )
 ```
@@ -669,14 +583,14 @@ summarize_draws(draws_ps_no_borrow, ~ quantile(.x, probs = c(0.025, 0.50, 0.975)
 ## # A tibble: 8 × 4
 ##   variable                   `2.5%`    `50%`   `97.5%`
 ##   <chr>                       <dbl>    <dbl>     <dbl>
-## 1 lp__                     -466.    -462.    -460.    
-## 2 treatment log HR           -0.733   -0.342    0.0396
-## 3 baseline log hazard rate   -4.69    -4.20    -3.65  
-## 4 ps_cat_low                 -0.382    0.414    1.11  
-## 5 ps_cat_low_med              0.400    0.999    1.57  
-## 6 ps_cat_high_med             1.41     2.11     2.75  
-## 7 ps_cat_high                 2.37     3.02     3.62  
-## 8 treatment HR                0.480    0.710    1.04
+## 1 lp__                     -466.    -462.    -459.    
+## 2 treatment log HR           -0.730   -0.353    0.0378
+## 3 baseline log hazard rate   -4.72    -4.18    -3.71  
+## 4 ps_cat_low                 -0.361    0.387    1.12  
+## 5 ps_cat_low_med              0.449    0.990    1.58  
+## 6 ps_cat_high_med             1.43     2.10     2.78  
+## 7 ps_cat_high                 2.37     3.00     3.62  
+## 8 treatment HR                0.482    0.703    1.04
 ```
 
 
@@ -699,7 +613,7 @@ anls_ps_bdb <- create_analysis_obj(
 res_ps_bdb <- mcmc_sample(
   x = anls_ps_bdb,
   iter_warmup = 1000,
-  iter_sampling = 500,
+  iter_sampling = 5000,
   chains = 1
 )
 ```
@@ -716,18 +630,18 @@ summarize_draws(draws_ps_bdb, ~ quantile(.x, probs = c(0.025, 0.50, 0.975)))
 
 ```
 ## # A tibble: 10 × 4
-##    variable                                `2.5%`     `50%`    `97.5%`
-##    <chr>                                    <dbl>     <dbl>      <dbl>
-##  1 lp__                               -1427.      -1420.    -1418.    
-##  2 treatment log HR                      -0.641      -0.339    -0.0430
-##  3 commensurability parameter             0.00555    64.5    1202.    
-##  4 baseline log hazard rate, internal    -4.65       -4.16     -3.78  
-##  5 baseline log hazard rate, external    -4.70       -4.16     -3.79  
-##  6 ps_cat_low                            -0.307       0.230     0.895 
-##  7 ps_cat_low_med                         0.633       1.02      1.57  
-##  8 ps_cat_high_med                        1.69        2.06      2.63  
-##  9 ps_cat_high                            2.53        2.91      3.44  
-## 10 treatment HR                           0.527       0.712     0.958
+##    variable                               `2.5%`     `50%`    `97.5%`
+##    <chr>                                   <dbl>     <dbl>      <dbl>
+##  1 lp__                               -1426.     -1420.    -1418.    
+##  2 treatment log HR                      -0.680     -0.345    -0.0328
+##  3 commensurability parameter             0.0661    52.6    1366.    
+##  4 baseline log hazard rate, internal    -4.65      -4.19     -3.77  
+##  5 baseline log hazard rate, external    -4.66      -4.20     -3.81  
+##  6 ps_cat_low                            -0.321      0.265     0.858 
+##  7 ps_cat_low_med                         0.635      1.07      1.55  
+##  8 ps_cat_high_med                        1.66       2.10      2.59  
+##  9 ps_cat_high                            2.53       2.95      3.41  
+## 10 treatment HR                           0.507      0.708     0.968
 ```
 
 It looks like PS + BDB allowed us to most accurately recover the
