--- a/vignettes/dataset.Rmd
+++ b/vignettes/dataset.Rmd
@@ -45,6 +45,7 @@ Now you're ready to start with `psborrow2`.
 ```r
 library(psborrow2)
 library(cmdstanr)
+# Warning: package 'cmdstanr' was built under R version 4.3.3
 ```
 
 # Creating an analysis object {.tabset}
@@ -399,12 +400,12 @@ results$summary()
 # # A tibble: 6 × 10
 #   variable      mean    median     sd    mad          q5      q95  rhat ess_bulk
 #   <chr>        <dbl>     <dbl>  <dbl>  <dbl>       <dbl>    <dbl> <dbl>    <dbl>
-# 1 lp__     -1618.    -1618.    1.50   1.29   -1621.      -1.62e+3  1.00   71314.
-# 2 beta_trt    -0.155    -0.158 0.199  0.198     -0.477    1.74e-1  1.00   85216.
-# 3 tau          1.21      0.506 1.92   0.693      0.00418  4.74e+0  1.00   81024.
-# 4 alpha[1]    -3.36     -3.35  0.161  0.161     -3.63    -3.10e+0  1.00   86029.
-# 5 alpha[2]    -2.40     -2.40  0.0557 0.0557    -2.49    -2.31e+0  1.00  132062.
-# 6 HR_trt       0.873     0.854 0.176  0.168      0.620    1.19e+0  1.00   85216.
+# 1 lp__     -1618.    -1618.    1.49   1.29   -1621.      -1.62e+3  1.00   73570.
+# 2 beta_trt    -0.156    -0.158 0.198  0.198     -0.479    1.74e-1  1.00   87479.
+# 3 tau          1.21      0.507 1.93   0.695      0.00448  4.76e+0  1.00   87300.
+# 4 alpha[1]    -3.36     -3.35  0.161  0.160     -3.63    -3.10e+0  1.00   87253.
+# 5 alpha[2]    -2.40     -2.40  0.0557 0.0556    -2.49    -2.31e+0  1.00  127633.
+# 6 HR_trt       0.873     0.854 0.176  0.168      0.620    1.19e+0  1.00   87479.
 # # ℹ 1 more variable: ess_tail <dbl>
 ```
 
@@ -438,41 +439,41 @@ print(draws)
 # 
 #          chain
 # iteration     1     2     3     4
-#         1 -1616 -1616 -1616 -1616
-#         2 -1616 -1616 -1618 -1618
-#         3 -1616 -1617 -1619 -1617
-#         4 -1616 -1618 -1619 -1618
-#         5 -1617 -1617 -1617 -1617
+#         1 -1620 -1617 -1617 -1618
+#         2 -1616 -1617 -1619 -1618
+#         3 -1619 -1618 -1618 -1617
+#         4 -1619 -1617 -1619 -1617
+#         5 -1620 -1617 -1618 -1617
 # 
 # , , variable = beta_trt
 # 
 #          chain
-# iteration     1      2      3      4
-#         1 -0.20 -0.009 -0.022 -0.109
-#         2 -0.31 -0.092 -0.167 -0.305
-#         3 -0.16 -0.082  0.027  0.092
-#         4 -0.24 -0.319 -0.092  0.226
-#         5 -0.30 -0.081 -0.012 -0.439
+# iteration      1      2      3      4
+#         1  0.297  0.037 -0.227 -0.164
+#         2 -0.200 -0.148 -0.312 -0.290
+#         3 -0.506 -0.472  0.033 -0.207
+#         4  0.043 -0.454  0.042 -0.126
+#         5  0.114  0.014 -0.151 -0.033
 # 
 # , , variable = tau
 # 
 #          chain
-# iteration    1    2    3    4
-#         1 1.62 1.14 1.94 2.58
-#         2 0.84 1.03 1.32 0.23
-#         3 0.48 1.90 0.61 1.12
-#         4 1.46 0.48 0.18 0.48
-#         5 0.33 1.64 0.32 2.15
+# iteration      1    2     3     4
+#         1 0.0136 0.45 0.083 0.607
+#         2 1.8391 0.41 0.012 0.041
+#         3 0.1793 2.85 0.310 0.079
+#         4 0.0056 1.55 0.088 0.043
+#         5 0.0017 0.90 0.020 0.113
 # 
 # , , variable = alpha[1]
 # 
 #          chain
 # iteration    1    2    3    4
-#         1 -3.4 -3.4 -3.5 -3.4
-#         2 -3.3 -3.4 -3.5 -3.4
-#         3 -3.4 -3.4 -3.7 -3.5
-#         4 -3.3 -3.4 -3.6 -3.6
-#         5 -3.3 -3.5 -3.5 -3.2
+#         1 -3.7 -3.6 -3.3 -3.2
+#         2 -3.4 -3.3 -3.2 -3.4
+#         3 -3.2 -3.2 -3.5 -3.4
+#         4 -3.4 -3.1 -3.5 -3.3
+#         5 -3.5 -3.5 -3.4 -3.5
 # 
 # # ... with 49995 more iterations, and 2 more variables
 ```
@@ -489,12 +490,12 @@ summary(draws)
 # # A tibble: 6 × 10
 #   variable          mean   median     sd    mad       q5      q95  rhat ess_bulk
 #   <chr>            <dbl>    <dbl>  <dbl>  <dbl>    <dbl>    <dbl> <dbl>    <dbl>
-# 1 lp__          -1.62e+3 -1.62e+3 1.50   1.29   -1.62e+3 -1.62e+3  1.00   71314.
-# 2 treatment lo… -1.55e-1 -1.58e-1 0.199  0.198  -4.77e-1  1.74e-1  1.00   85216.
-# 3 commensurabi…  1.21e+0  5.06e-1 1.92   0.693   4.18e-3  4.74e+0  1.00   81024.
-# 4 baseline log… -3.36e+0 -3.35e+0 0.161  0.161  -3.63e+0 -3.10e+0  1.00   86029.
-# 5 baseline log… -2.40e+0 -2.40e+0 0.0557 0.0557 -2.49e+0 -2.31e+0  1.00  132062.
-# 6 treatment HR   8.73e-1  8.54e-1 0.176  0.168   6.20e-1  1.19e+0  1.00   85216.
+# 1 lp__          -1.62e+3 -1.62e+3 1.49   1.29   -1.62e+3 -1.62e+3  1.00   73570.
+# 2 treatment lo… -1.56e-1 -1.58e-1 0.198  0.198  -4.79e-1  1.74e-1  1.00   87479.
+# 3 commensurabi…  1.21e+0  5.07e-1 1.93   0.695   4.48e-3  4.76e+0  1.00   87300.
+# 4 baseline log… -3.36e+0 -3.35e+0 0.161  0.160  -3.63e+0 -3.10e+0  1.00   87253.
+# 5 baseline log… -2.40e+0 -2.40e+0 0.0557 0.0556 -2.49e+0 -2.31e+0  1.00  127633.
+# 6 treatment HR   8.73e-1  8.54e-1 0.176  0.168   6.20e-1  1.19e+0  1.00   87479.
 # # ℹ 1 more variable: ess_tail <dbl>
 ```
 
@@ -550,14 +551,14 @@ for all parameters:
 library(posterior)
 summarize_draws(draws, ~ quantile(.x, probs = c(0.1, 0.9)))
 # # A tibble: 6 × 3
-#   variable                                `10%`     `90%`
-#   <chr>                                   <dbl>     <dbl>
-# 1 lp__                               -1620.     -1616.   
-# 2 treatment log HR                      -0.408      0.100
-# 3 commensurability parameter             0.0172     3.22 
-# 4 baseline log hazard rate, internal    -3.57      -3.15 
-# 5 baseline log hazard rate, external    -2.47      -2.33 
-# 6 treatment HR                           0.665      1.11
+#   variable                                `10%`      `90%`
+#   <chr>                                   <dbl>      <dbl>
+# 1 lp__                               -1620.     -1616.    
+# 2 treatment log HR                      -0.408      0.0998
+# 3 commensurability parameter             0.0178     3.22  
+# 4 baseline log hazard rate, internal    -3.57      -3.16  
+# 5 baseline log hazard rate, external    -2.47      -2.33  
+# 6 treatment HR                           0.665      1.10
 ```
 
 Another useful application of the `posterior` package is the evaluation of the Monte Carlo
@@ -568,7 +569,7 @@ standard error for quantiles of a variable of interest:
 vm <- extract_variable_matrix(draws, "treatment HR")
 mcse_quantile(x = vm, probs = c(0.1, 0.5, 0.9))
 #  mcse_q10  mcse_q50  mcse_q90 
-# 0.0006465 0.0006845 0.0012300
+# 0.0006160 0.0006435 0.0012350
 ```
 
 `posterior` contains many other helpful functions, as outlined in their
